# chatbot_project

./: README.md  keyword_extract copy 2.ipynb  keyword_extract copy.ipynb  keyword_extract.ipynb  pyproject.toml  test.ipynb
src/: main.py
src/cox/: __init__.py  config.py
src/cox/api/: __init__.py  app.py  router.py
src/cox/data/: loader.py  preprocessor.py
src/cox/embedding/: __init__.py  chunker.py  vectorizer.py
src/cox/generation/: __init__.py  llm.py  prompt.py
src/cox/memory/: __init__.py  conversation.py
src/cox/retrieval/: __init__.py  retriever.py  vector_db.py
