[project]
name = "cox"
version = "0.1.0"
description = ""
authors = [
    {name = "xodus4352",email = "dkssud4352@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "openai (>=1.97.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "konlpy (>=0.6.0,<0.7.0)",
]

[tool.poetry]
packages = [{include = "cox", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
